# TELEGRAM_MEMORY_BOT

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: bot.py
src/configs/: base.py  config.py  logger.py
src/exceptions/: exceptions.py
src/google_sheets/: sheets.py
src/handlers/: command_handlers.py
src/utils/: utils.py
